log/build_2025-03-19_16-08-34/py_pubsub/stderr.log
  File "/home/OSTR/modem_ws2/install/py_pubsub/lib/python3.12/site-packages/py_pubsub/fishimu.py", line 14
    class fishIMUNode(Node)
                           ^
SyntaxError: expected ':'

